fix header spacing

--- a/src/ui/components/header/header.css
+++ b/src/ui/components/header/header.css
@@ -11,12 +11,12 @@
   width: 80%;
   height: 104px;
   max-width: 1400px;
-  min-width: 800px;
+  min-width: 900px;
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   z-index: 2;
   position: absolute;
@@ -24,22 +24,18 @@
 
 .logo {
   position: relative;
+  padding-left: 20px;
 }
 
 .nav {
   margin-right: 10px;
 }
 
-.spacing {
-  max-width: 15%;
-  width: 5%;
-}
-
 .header-under-box-wrapper {
   width: 80%;
   height: 164px;
   max-width: 1400px;
-  min-width: 800px;
+  min-width: 900px;
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
