--- a/src/ui/components/search-results/search-results.css
+++ b/src/ui/components/search-results/search-results.css
@@ -11,5 +11,5 @@
 .search-results-container {
   width: 80%;
   max-width: 1400px;
-  min-width: 1200px;
+  min-width: 800px;
 }
